# transcripter

./: .env.template  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  indexing-config.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: housekeeping.yml  publish.yml  release.yml
docs/: transcripter.html
docs/transcripter/: config.html  index.html  logs.html
docs/transcripter/core/: index.html  redis_manager.html  youtube_manager.html
docs/transcripter/services/: index.html  indexing_service.html  search_service.html
examples/basic/: app.py
examples/basic/static/: styles.css
examples/basic/templates/: index.html
transcripter/: config.py  logs.py  settings.py
transcripter/core/: __init__.py  redis.py  redis_manager.py  youtube.py  youtube_manager.py
transcripter/services/: __init__.py  indexing_service.py  search_service.py
transcripter/web/: __init__.py  site.py
transcripter/web/templates/: index.html
